# ControlTime

./: .gitignore  DEPLOYMENT.md  ESTADO_SISTEMA.md  GUIA_PRUEBAS_COMPLETA.md  INICIO_EXITOSO.md  Makefile  README.md  dashboard.sql  docker-compose.prod.yml  docker-compose.yml  fix_canvas.py  generate_dashboard_data.js  generate_dashboard_data.py  package-lock.json  package.json  server.js  subir-github.ps1  subir.github.ps1
.github/workflows/: auth-smoke.yml  ci-cd.yml  ci.yml
ai_engine/: Dockerfile.ai  eye_analyzer.py  requirements.txt
backend/: CMakeLists.txt  CMakePresets.json  DERMALOG_INTEGRATION.md  Dockerfile  entrypoint.sh  image_optimizer.py
backend/src/: main.cpp  vision_pipeline.hpp  websocket_session.hpp
certs/: server.crt  server.key
db_scripts/: 01_init.sql  02_seed_demo.sql  03_auth_biometric.sql  04_telemetry_schema_v2.sql  05_reports_admin.sql  06_seed_users_raura.sql  07_auth_login_operacion.sql  08_formula_dictionary_seed.sql
docs/: DIAGRAMAS_BASE_DATOS_TI_2026-03-26.md  INFORME_TECNICO_FRONTEND_BACKEND_2026-03-26.md  REVISION_COMPLETA_TIEMPO_REAL_2026-03-26.md  administracion_informes_tecnicos_grabados.rtf  creacion_usuario_empresa_detallado_word.rtf  diagrama_flujo_insertar_mapa_informe.rtf  guion_video_7min_sin_audio.md  informe_minero_uso_herramientas_dinamico_word.rtf  login_usuario_detallado_word.rtf  mantenimiento_usuario_empresa_propuesto_word.rtf  narracion_video_7min.srt  powerbi_dashboard_informe_tecnico_flujo_factibilidad.rtf  registro_empresa_detallado_word.rtf
ecw-plugin/: README.md
frontend/: Dockerfile  app.js  index.html  index.poc.html  nginx.conf  package-lock.json  package.json  playwright.ci.config.ts  playwright.config.ts  playwright.prod.config.ts  styles.css  vite.config.js  vitest.config.js
frontend/e2e/: dashboard.spec.ts  editor-save.spec.ts  editor.spec.ts  report-v2-admin.spec.ts  user-maintenance.spec.ts
frontend/scripts/: record-platform-demo.mjs
frontend/src/: App.jsx  index.css
frontend/src/auth/: authApi.js  authApi.test.js  authStorage.js  biometricFiveHelpers.js  faceTrackingUtils.js
frontend/src/components/Auth/: AuditCenter.jsx  AuthGateway.jsx
frontend/src/components/Dashboard/: AdvancedSensors.jsx  MiningDashboard.jsx  MiningDashboard.test.jsx
frontend/src/components/Editor/: RichTextEditor.jsx  RichTextEditor.menu.test.jsx  RichTextEditor.test.jsx
frontend/src/components/ReportStudioV2/: App.jsx  styles.css
frontend/src/components/Special/: AzimuthCompass.jsx  DetailedMap.jsx  (+6 more)
frontend/src/config/: facialIcaoConfig.js
public/: index.html
public/css/: style.css
public/js/: app.js
scripts/: apply-db-auth-login.ps1  apply-db-formula-dictionary.ps1  cicd-auto-heal.ps1  convert-ecw-host.ps1  install-ecw-sdk-host.ps1  rebuild-frontend-docker.ps1  regression-full.ps1  smoke-auth-e2e.ps1  smoke-test.ps1  test-ecw-now.ps1  verify-biometric-dnn.ps1  verify-ecw.ps1
scripts/ci/: auto_set_namespace.sh  build_and_push.sh  full_auto_run.sh  preflight.sh  run_full_automation.sh  run_local_linux.sh  smoke_test.sh
tests/: server.test.js
(+22 files in other folders)
